[gd_scene load_steps=44 format=2]

[ext_resource path="res://world/assets/floor/office_floor.png" type="Texture" id=1]
[ext_resource path="res://world/assets/wall/office_wall.png" type="Texture" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/Enemies.gd" type="Script" id=4]
[ext_resource path="res://world/assets/tables/TableSideways.tscn" type="PackedScene" id=5]
[ext_resource path="res://world/shpButton.gd" type="Script" id=6]
[ext_resource path="res://world/assets/doors/Door_next_floor.tscn" type="PackedScene" id=7]
[ext_resource path="res://world/Currency.gd" type="Script" id=8]
[ext_resource path="res://world/assets/wall/ui_wall.png" type="Texture" id=9]
[ext_resource path="res://UIs/HealthUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://world/Level6.tscn" type="PackedScene" id=11]
[ext_resource path="res://world/shopItem.gd" type="Script" id=12]
[ext_resource path="res://player/heart.png" type="Texture" id=13]
[ext_resource path="res://player/speedUP.png" type="Texture" id=14]
[ext_resource path="res://world/assets/Currency/Gold_coin.tscn" type="PackedScene" id=15]
[ext_resource path="res://world/assets/doors/steel_door.png" type="Texture" id=16]
[ext_resource path="res://player/damageUP.png" type="Texture" id=17]
[ext_resource path="res://enemy/soldier/soldierIdle_left.png" type="Texture" id=18]
[ext_resource path="res://world/seller.gd" type="Script" id=19]
[ext_resource path="res://player/Mission_reminder.tscn" type="PackedScene" id=20]
[ext_resource path="res://world/assets/plants/potted_plant_1.tscn" type="PackedScene" id=21]
[ext_resource path="res://world/assets/tables/Table.tscn" type="PackedScene" id=22]
[ext_resource path="res://world/assets/plants/potted_tree_1.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 947.803, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5321, 389.616 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.2492, 424.166 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 735.629, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96.5471, 44.1942 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://UIs/ProzaLibre-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://UIs/ProzaLibre-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://UIs/ProzaLibre-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 15
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 15
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 15
font_data = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 17.9936, 21.1215 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 38.1497, 282.352 )

[sub_resource type="GDScript" id=16]
script/source = "extends Node2D

var messages = [\"My mission...\"]

var typing_speed = 0.1
var read_time = 2

var current_message = 0
var display = \"\"
var current_char = 0

func _ready():
	start_dialogue()
	
func start_dialogue():
	current_message = 0
	display = \"\"
	current_char = 0
	
	$next_char.set_wait_time(typing_speed)
	$next_char.start()

func stop_dialogue():
	queue_free()

func _on_next_char_timeout():
	if (current_char < len(messages[current_message])):
		var next_char = messages[current_message][current_char]
		display += next_char

		$Label.text = display
		current_char += 1
	else:
		pass

"

[sub_resource type="DynamicFontData" id=17]
font_path = "res://UIs/ProzaLibre-Regular.ttf"

[sub_resource type="DynamicFont" id=18]
size = 14
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://UIs/Clickuper.ttf"

[sub_resource type="DynamicFont" id=20]
size = 36
outline_size = 2
outline_color = Color( 0.568627, 0.568627, 0.568627, 1 )
use_filter = true
font_data = SubResource( 19 )

[node name="SHOP" type="Node2D"]

[node name="YSort" type="YSort" parent="."]
position = Vector2( 0, 53.8811 )

[node name="floor" type="StaticBody2D" parent="YSort"]

[node name="Sprite" type="Sprite" parent="YSort/floor"]
position = Vector2( 681.769, 370.984 )
scale = Vector2( 2.65124, 2.29483 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -152.556, -61.8083, 527.187, 306.015 )

[node name="wall" type="StaticBody2D" parent="YSort"]

[node name="Sprite2" type="Sprite" parent="YSort/wall"]
position = Vector2( 681.16, 70.5502 )
scale = Vector2( 1.40136, 1.5 )
texture = ExtResource( 2 )

[node name="upper" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 515.686, 133.954 )
shape = SubResource( 1 )

[node name="right" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 1379.07, 334.192 )
shape = SubResource( 2 )

[node name="left" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( -13.3435, 334.55 )
shape = SubResource( 3 )

[node name="down" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 662.549, 725.295 )
shape = SubResource( 4 )

[node name="UIwall" type="Sprite" parent="YSort/wall"]
position = Vector2( 685.021, -29.1571 )
scale = Vector2( 1.33713, 1 )
texture = ExtResource( 9 )

[node name="Tables" type="YSort" parent="YSort"]

[node name="TableSideways" parent="YSort/Tables" instance=ExtResource( 5 )]
position = Vector2( 347.287, 180.034 )

[node name="HurtBox" parent="YSort/Tables/TableSideways" index="2"]
visible = true

[node name="CollisionShape2D" parent="YSort/Tables/TableSideways/HurtBox" index="1"]
disabled = true

[node name="TableSideways2" parent="YSort/Tables" instance=ExtResource( 5 )]
position = Vector2( 602.858, 178.446 )

[node name="HurtBox" parent="YSort/Tables/TableSideways2" index="2"]
visible = true

[node name="CollisionShape2D" parent="YSort/Tables/TableSideways2/HurtBox" index="1"]
disabled = true

[node name="TableSideways3" parent="YSort/Tables" instance=ExtResource( 5 )]
position = Vector2( 856.842, 176.859 )

[node name="CollisionShape2D" parent="YSort/Tables/TableSideways3/HurtBox" index="1"]
disabled = true

[node name="Table" parent="YSort/Tables" instance=ExtResource( 22 )]
position = Vector2( 1198.02, 272.16 )

[node name="Table2" parent="YSort/Tables" instance=ExtResource( 22 )]
position = Vector2( 1194.02, 496.16 )

[node name="TableSideways4" parent="YSort/Tables" instance=ExtResource( 5 )]
position = Vector2( 518.019, 474.16 )

[node name="TableSideways5" parent="YSort/Tables" instance=ExtResource( 5 )]
position = Vector2( 858.019, 476.16 )

[node name="TrashCans" type="YSort" parent="YSort"]

[node name="Enemies" type="YSort" parent="YSort"]
script = ExtResource( 4 )

[node name="Plants" type="YSort" parent="YSort"]

[node name="potted_tree_1" parent="YSort/Plants" instance=ExtResource( 23 )]
position = Vector2( 1198.02, 92.1604 )

[node name="potted_tree_2" parent="YSort/Plants" instance=ExtResource( 23 )]
position = Vector2( 1346.02, 88.1604 )

[node name="potted_plant_1" parent="YSort/Plants" instance=ExtResource( 21 )]
position = Vector2( 1194.02, 288.16 )

[node name="potted_plant_2" parent="YSort/Plants" instance=ExtResource( 21 )]
position = Vector2( 1186.02, 568.16 )

[node name="potted_plant_3" parent="YSort/Plants" instance=ExtResource( 21 )]
position = Vector2( 516.019, 506.16 )

[node name="potted_plant_4" parent="YSort/Plants" instance=ExtResource( 21 )]
position = Vector2( 896.019, 510.16 )

[node name="Currency" type="YSort" parent="YSort"]

[node name="Door_next_floor" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 1296.8, 47.6966 )
target_scene = ExtResource( 11 )

[node name="BackDoor_unusable" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 103.724, 49.3534 )

[node name="Sprite" parent="YSort/BackDoor_unusable" index="0"]
position = Vector2( -11.4908, 10.8466 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" parent="YSort/BackDoor_unusable" index="1"]
disabled = true

[node name="item1" type="Node2D" parent="YSort"]
position = Vector2( 377.76, 260.294 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="YSort/item1"]
position = Vector2( 8.48529, -91.9239 )
scale = Vector2( 4.53553, 4.53553 )
texture = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="YSort/item1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/item1/Area2D"]
position = Vector2( 12.0136, 73.4162 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="YSort/item1"]
margin_left = 77.8459
margin_top = -76.2598
margin_right = 117.846
margin_bottom = -62.2598
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemName" type="Label" parent="YSort/item1"]
margin_left = -111.427
margin_top = -61.6245
margin_right = -71.4269
margin_bottom = -47.6245
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="YSort/item1"]
margin_left = 38.4773
margin_top = 17.5227
margin_right = 103.477
margin_bottom = 44.5227
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Buy?"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item2" type="Node2D" parent="YSort"]
position = Vector2( 628.71, 257.624 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="YSort/item2"]
position = Vector2( 12.0208, -55.8614 )
scale = Vector2( 3.2539, 3.2539 )
texture = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="YSort/item2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/item2/Area2D"]
position = Vector2( 12.0136, 73.4162 )
shape = SubResource( 5 )

[node name="Buy" type="Button" parent="YSort/item2"]
margin_left = 41.0
margin_top = 18.0
margin_right = 105.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 12 )
disabled = true
text = "Buy?"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YSort/item2"]
margin_left = 87.7998
margin_top = -48.2733
margin_right = 127.8
margin_bottom = -34.2733
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemName" type="Label" parent="YSort/item2"]
margin_left = -100.477
margin_top = -62.9843
margin_right = -60.4769
margin_bottom = -48.9843
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item3" type="Node2D" parent="YSort"]
position = Vector2( 882.329, 257.624 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="YSort/item3"]
position = Vector2( 31.1126, -84.8528 )
scale = Vector2( 4.62392, 4.62392 )
texture = ExtResource( 17 )

[node name="Area2D" type="Area2D" parent="YSort/item3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/item3/Area2D"]
position = Vector2( 12.0136, 73.4162 )
shape = SubResource( 5 )

[node name="Buy" type="Button" parent="YSort/item3"]
margin_left = 42.6194
margin_top = 13.9898
margin_right = 108.619
margin_bottom = 40.9898
custom_fonts/font = SubResource( 13 )
text = "Buy?"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YSort/item3"]
margin_left = 65.5511
margin_top = -56.749
margin_right = 105.551
margin_bottom = -42.749
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemName" type="Label" parent="YSort/item3"]
margin_left = -107.893
margin_top = -62.9843
margin_right = -67.8932
margin_bottom = -48.9843
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC" type="StaticBody2D" parent="YSort"]
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="YSort/NPC"]
position = Vector2( 591.107, 118.592 )
scale = Vector2( 3.42045, 3.42045 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/NPC"]
position = Vector2( 587.435, 203.674 )
shape = SubResource( 14 )

[node name="Area2D" type="Area2D" parent="YSort/NPC"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/NPC/Area2D"]
position = Vector2( 193.406, 427.175 )
shape = SubResource( 15 )

[node name="Timer" type="Timer" parent="YSort/NPC"]

[node name="Label" type="Label" parent="YSort/NPC"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mission_reminder" parent="YSort/NPC" instance=ExtResource( 20 )]
position = Vector2( 474.82, 130.377 )
script = SubResource( 16 )

[node name="Sprite" parent="YSort/NPC/Mission_reminder" index="0"]
scale = Vector2( 4.20002, 2.28571 )

[node name="Label" parent="YSort/NPC/Mission_reminder" index="2"]
margin_left = -80.0
margin_right = 133.0
custom_fonts/font = SubResource( 18 )
align = 1

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 54.9708, 169.964 )

[node name="UIs" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="UIs" instance=ExtResource( 10 )]
margin_left = 6.62853
margin_top = 1.28089
margin_right = 46.6286
margin_bottom = 41.2809

[node name="Currency" type="Control" parent="UIs"]
margin_left = 102.897
margin_top = -13.0353
margin_right = 142.897
margin_bottom = 26.9647
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold_coin" parent="UIs/Currency" instance=ExtResource( 15 )]
position = Vector2( 626.263, 35.4148 )

[node name="currency_count" type="Label" parent="UIs/Currency"]
margin_left = 570.644
margin_top = 12.4443
margin_right = 616.644
margin_bottom = 65.4443
custom_fonts/font = SubResource( 20 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="YSort/item1/Area2D" to="YSort/item1" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="YSort/item1/Area2D" to="YSort/item1" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="YSort/item2/Area2D" to="YSort/item2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="YSort/item2/Area2D" to="YSort/item2" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="YSort/item3/Area2D" to="YSort/item3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="YSort/item3/Area2D" to="YSort/item3" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="YSort/NPC/Area2D" to="YSort/NPC" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="YSort/NPC/Timer" to="YSort/NPC" method="_on_Timer_timeout"]

[editable path="YSort/Tables/TableSideways"]
[editable path="YSort/Tables/TableSideways/HurtBox"]
[editable path="YSort/Tables/TableSideways2"]
[editable path="YSort/Tables/TableSideways2/HurtBox"]
[editable path="YSort/Tables/TableSideways3"]
[editable path="YSort/Tables/TableSideways3/HurtBox"]
[editable path="YSort/BackDoor_unusable"]
[editable path="YSort/NPC/Mission_reminder"]
